Создал Pojo класс для приема ответа от JSON. Сделал вывод товаров в список

--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="8dp"
-    tools:context=".HomeActivity">
+    tools:context=".ProductListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
