--- a/app/src/main/res/layout/list_products.xml
+++ b/app/src/main/res/layout/list_products.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context=".ProductListActivity">
+    tools:context=".Activity.ProductListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_list"
