Сделал закругление карточки товара

--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -7,12 +7,15 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="8dp"
+    app:cardCornerRadius="15dp"
     tools:context=".Activity.ProductListActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
